--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-	"deploy": "npx gh-pages -d dist"
+	"deploy": "npx gh-pages -d dist",
+	"publish": "npm run build && npm run deploy"
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^3.0.1",
